Regression: VSE Slip Strip Contents doesn't work properly #98797

Closed
opened 2022-06-11 18:08:45 +02:00 by fwfeet · 11 comments

System Information
Operating system: Windows-10-10.0.22598-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-10 19:07, hash: add1da52ad
Worked: 3.2
Caused by 7afcfe111a

Short description of error
The slip strip content doesn't slip contents it actually moves the whole strip, the strip should stay as place

Exact steps for others to reproduce the error

  • Add a strip
  • Shorten it from both sides
  • Then press S to slip the contents
**System Information** Operating system: Windows-10-10.0.22598-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-10 19:07, hash: `add1da52ad` Worked: 3.2 Caused by 7afcfe111a **Short description of error** The slip strip content doesn't slip contents it actually moves the whole strip, the strip should stay as place **Exact steps for others to reproduce the error** - Add a strip - Shorten it from both sides - Then press S to slip the contents
Author

Added subscriber: @costa

Added subscriber: @costa

Added subscriber: @tintwotin

Added subscriber: @tintwotin

Yes, this is a regression. Instead of doing a slip(move content), it is now doing a slide(move position).
{F13148682,size=full}

Yes, this is a regression. Instead of doing a slip(move content), it is now doing a slide(move position). {[F13148682](https://archive.blender.org/developer/F13148682/image.png),size=full}
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report
Yes, it's a regression and I can confirm too.

Hi, thanks for the report Yes, it's a regression and I can confirm too.
Pratik Borhade changed title from VSE Slip Strip Contents doesn't work properly to Regression: VSE Slip Strip Contents doesn't work properly 2022-06-14 07:31:43 +02:00
Member

Added subscriber: @iss

Added subscriber: @iss
Member

Affect by 7afcfe111a
@iss ^

Affect by 7afcfe111a @iss ^

This issue was referenced by 06780aa4e6

This issue was referenced by 06780aa4e6e04b10e1bf6be6850d6ad02f0c80af

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-06-14 17:05:12 +02:00

@iss Maybe consider also adding Slide now you know how it is done?

@iss Maybe consider also adding Slide now you know how it is done?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98797
No description provided.