Fix T98797: VSE Slip Strip Contents doesn't work properly

Caused by oversight in 7afcfe111aac - code relied on fact, that strip
boundary holds old value until updated.

Calculate new offsets based on stored orignal offsets.